package edu.najah.cap.advance.assignments.assignment2.new_code;

public class Database {
    public void save(String id, String data) {
        System.out.println("[DB] Saved " + id + ":" + data);
    }
}
