package edu.najah.cap.advance.assignments.assignment2.new_code.observer;

import edu.najah.cap.advance.assignments.assignment2.new_code.Event;

public interface EventListener {
    void onEventProcessed(Event e);
}
